syntax = "proto3";

package health;

import "google/protobuf/timestamp.proto";

service HealthService {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  google.protobuf.Timestamp timestamp = 2;
  map<string, string> details = 3;
}

